--- a/giftyed/src/components/profileInfo/ProfileInfo.scss
+++ b/giftyed/src/components/profileInfo/ProfileInfo.scss
@@ -1,98 +1,94 @@
 @import "../../utils/variables.scss";
 
 .profile-info {
-  height: 100%;
-  display: flex;
-  align-items: center;
-
+  width: 100%;
   &__content {
-    width: 100vw;
     display: flex;
-    flex-wrap: nowrap;
-    color: $whiteText;
+    flex-wrap: wrap;
+    justify-content: space-between;
     font-family: "Inter", sans-serif;
 
     &-avatar {
-      min-width: 30%;
+      position: relative;
+      width: calc(20vw + 125px);
+
       &-square {
-        width: calc(30vw - 155px);
+        width: 20vw;
         height: 250px;
-        position: absolute;
-        z-index: -1;
-        background-color: #2c1e1a;
+        position: relative;
+        background-color: $darkBrown;
+        overflow: hidden;
       }
 
       &-photo {
-        display: flex;
-        justify-content: flex-end;
-        padding-right: 2vw;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: calc(20vw - 125px);
 
         img {
           border-radius: 50%;
           width: 250px;
           height: 250px;
+          object-fit: cover;
         }
       }
     }
 
     &-info {
-      min-width: 25%;
       display: flex;
       flex-direction: column;
-      button {
-        cursor: pointer;
-        height: 25px;
-        width: 75px;
-        font-size: 14px;
-        color: $lightBrown;
-        background-color: $orange;
-        font-family: "Inter", sans-serif;
-        border: none;
-        border-radius: 7px;
-        margin-right: 5px;
-        margin-top: 10px;
-
-        &:hover {
+      &-name {
+        font-size: 24px;
+        p {
           color: $whiteText;
         }
       }
 
-      &-name {
-        font-size: 28px;
+      &-others {
+        margin-left: 15px;
+        font-size: 16px;
+        display: flex;
+        flex-direction: column;
         p {
-          margin: 10px;
+          padding: 5px;
+          color: $whiteText;
         }
+      }
 
-        &-others {
-          padding-left: 15px;
-          display: flex;
-          flex-direction: column;
-          p {
-            padding: 5px;
+      &-follow {
+        button {
+          cursor: pointer;
+          height: 25px;
+          width: 75px;
+          font-size: 14px;
+          color: $lightBrown;
+          background-color: $orange;
+          font-family: "Inter", sans-serif;
+          border: none;
+          border-radius: 7px;
+          margin-right: 5px;
+          margin-top: 10px;
+
+          &:hover {
+            color: $whiteText;
           }
         }
       }
     }
 
     &-interests {
-      font-size: 28px;
-      min-width: 25%;
-      p {
-        margin: 10px;
+      &-header {
+        font-size: 24px;
+        color: $whiteText;
       }
 
       &-container {
-        .MuiStack-root {
-          display: flex;
-          flex-direction: row;
-          flex-wrap: wrap;
-        }
-
-        .MuiStack-root > :not(style) {
-          font-family: "Inter", sans-serif;
-          background-color: $orange;
-          color: $lightBrown;
-          margin-top: 10px;
+        &-tag {
+          font-family: "Inter", sans-serif !important;
+          background-color: $orange !important;
+          color: $lightBrown !important;
         }
       }
 
@@ -116,28 +112,22 @@
     }
 
     &-desiredGifts {
-      min-width: 20%;
-
       &-header {
-        text-align: center;
-        p {
-          font-size: 28px;
-          margin: 10px;
-        }
+        font-size: 24px;
+        color: $whiteText;
       }
 
-      &-box {
+      &-container {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
-        &-item {
+        
+        &-gift {
           cursor: pointer;
-          text-align: center;
-          font-size: 11px;
-          width: 100px;
-          img {
-            width: 45px;
-            border-radius: 10px;
+          width: min-content;
+          margin: 5px;
+          &-photo {
+            width: 70px;
+            border-radius: 20px;
             transition: opacity 0.3s ease-out;
 
             &:hover {
@@ -145,8 +135,10 @@
             }
           }
 
-          p {
-            margin: 5px;
+          &-name {
+            color: $whiteText;
+            text-align: center;
+            font-size: 12px;
           }
         }
       }
