--- a/giftyed/src/components/wishItem/WishItem.scss
+++ b/giftyed/src/components/wishItem/WishItem.scss
@@ -7,9 +7,8 @@
   justify-content: space-between;
 
   &__item {
-    width: 28%;
+    width: 100px;
     margin: 10px;
-    border-radius: 20%;
     cursor: pointer;
     position: relative;
     overflow: hidden;
