--- a/giftyed/src/components/followedUser/FollowedUser.scss
+++ b/giftyed/src/components/followedUser/FollowedUser.scss
@@ -1,31 +1,24 @@
 @import "../../utils/variables.scss";
 
 .followed-user {
-  text-align: center;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  height: 110px;
+  flex-direction: row;
 
   &__container {
-    width: 30%;
-    margin: 11px;
+    width: 33.33%;
     cursor: pointer;
+    text-align: center;
 
     &-photo {
-      img {
-        max-width: 35%;
-        height: auto;
-        border-radius: 50%;
-      }
+      width: 50px;
+      border-radius: 50%;
     }
 
     &-name {
-      p {
-        font-family: "Inter", sans-serif;
-        font-size: 12px;
-        color: $lightBrown;
-      }
+      font-family: "Inter", sans-serif;
+      font-size: 12px;
+      color: $lightBrown;
     }
   }
 }
