--- a/giftyed/src/components/profileMenu/ProfileMenu.scss
+++ b/giftyed/src/components/profileMenu/ProfileMenu.scss
@@ -1,204 +1,160 @@
 @import "../../utils/variables.scss";
 
 .profile-menu {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  background-color: #ecd3af;
-  height: 100%;
+  width: 100vw;
 
-  &__upcomingBirthday {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    &-header {
-      font-family: "Inter", sans-serif;
-      font-size: 18px;
-      color: $lightBrown;
-      text-align: center;
-      margin: 10px;
-    }
-
-    &-followedUsers {
-      height: calc(100% - 45px);
-      overflow-y: auto;
-
-      &::-webkit-scrollbar {
-        width: 10px;
-
-        &-thumb {
-          background-color: $orange;
-          border-radius: 20px;
-        }
-
-        &-track {
-          background-color: rgba(237, 231, 220, 0.7);
-          border-radius: 20px;
-        }
+  &__content {
+    
+    &-upcomingBirthday {
+      width: 33.33%;
+      &-header {
+        font-family: "Inter", sans-serif;
+        text-align: center;
+        color: $lightBrown;
       }
-    }
-  }
 
-  &__calendar {
-    display: flex;
-    align-items: center;
-    .MuiPickersDay-dayWithMargin.dayMarker {
-      background-color: $darkBrown;
-      color: white;
+      // &-followedUsers {
+      // }
     }
-    .MuiDateCalendar-root {
-      color: $whiteText;
-      border-radius: 25px;
-      background-color: $brown;
-      font-family: "Inter", sans-serif;
-      height: 39vh;
-      width: 22vw;
-      overflow-y: auto;
-      &::-webkit-scrollbar {
-        display: none;
+
+    &-calendar {
+      display: flex;
+      align-items: center;
+      .MuiPickersDay-dayWithMargin.dayMarker {
+        background-color: $darkBrown;
+        color: white;
       }
-      div::-webkit-scrollbar {
-        display: none;
-      }
-    }
-
-    .MuiPickersDay-root {
-      height: 3vw;
-      width: 3vw;
-      color: $whiteText;
-      font-family: "Inter", sans-serif;
-      margin: 0;
-    }
-
-    .MuiDayCalendar-weekDayLabel,
-    .MuiPickersArrowSwitcher-button,
-    .MuiPickersCalendarHeader-switchViewButton {
-      height: 3vw;
-      width: 3vw;
-      margin: 0;
-      color: $whiteText;
-      font-family: "Inter", sans-serif !important;
-    }
-
-    .css-jgls56-MuiButtonBase-root-MuiPickersDay-root:not(.Mui-selected) {
-      border: 3px solid $whiteText;
-    }
-    .Mui-selected {
-      background-color: $orange !important;
-    }
-    .MuiPickersYear-root {
-      flex-basis: 20vw;
-    }
-
-    &-popup {
-      font-family: "Inter", sans-serif;
-
-      .MuiDialog-paper {
-        background-color: $creamy;
+      .MuiDateCalendar-root {
+        margin: 15px 0 15px 0;
+        color: $whiteText;
         border-radius: 25px;
-        border: 2px solid $creamy;
+        background-color: $brown;
+        font-family: "Inter", sans-serif;
+        height: 35vh;
+        overflow-y: auto;
+        &::-webkit-scrollbar {
+          display: none;
+        }
+        div::-webkit-scrollbar {
+          display: none;
+        }
       }
 
-      &-content {
-        color: $whiteText !important;
-        background-color: $brown;
-        width: 350px;
-        &-gift,
-        &-user {
-          display: flex;
-          justify-content: center;
-          margin: 10px 0;
-          align-items: center;
+      .MuiPickersDay-root {
+        color: $whiteText;
+        font-family: "Inter", sans-serif;
+        margin: 0;
+      }
 
-          &-element {
-            text-align: center;
-            font-family: "Inter", sans-serif;
-            height: 25px;
-            width: 125px;
-            border: none;
-            border-radius: 15px;
-            color: $darkBrown;
-            background-color: $orange;
-            &:hover {
-              background-color: $creamy !important;
-              color:$lightBrown;
+      .MuiDayCalendar-weekDayLabel,
+      .MuiPickersArrowSwitcher-button,
+      .MuiPickersCalendarHeader-switchViewButton {
+        margin: 0;
+        color: $whiteText;
+        font-family: "Inter", sans-serif !important;
+      }
+
+      .css-jgls56-MuiButtonBase-root-MuiPickersDay-root:not(.Mui-selected) {
+        border: 3px solid $whiteText;
+      }
+      .Mui-selected {
+        background-color: $orange !important;
+      }
+      .MuiPickersYear-root {
+        flex-basis: 20vw;
+      }
+
+      &-popup {
+        font-family: "Inter", sans-serif;
+
+        .MuiDialog-paper {
+          background-color: $creamy;
+          border-radius: 25px;
+          border: 2px solid $creamy;
+        }
+
+        &-content {
+          color: $whiteText !important;
+          background-color: $brown;
+          width: 350px;
+          &-gift,
+          &-user {
+            display: flex;
+            justify-content: center;
+            margin: 10px 0;
+            align-items: center;
+
+            &-element {
+              text-align: center;
+              font-family: "Inter", sans-serif;
+              height: 25px;
+              width: 125px;
+              border: none;
+              border-radius: 15px;
+              color: $darkBrown;
+              background-color: $orange;
+              &:hover {
+                background-color: $creamy !important;
+                color: $lightBrown;
+              }
             }
           }
 
-        }
+          &-notes {
+            width: 100%;
 
-        &-notes {
-          width: 100%;
+            &-element {
+              display: flex;
+              justify-content: space-between;
+              margin: 10px 0;
 
-          &-element {
-            display: flex;
-            justify-content: space-between;
-            margin: 10px 0;
+              &-remove {
+                font-family: "Inter", sans-serif !important;
+                border-radius: 25px !important;
+                height: 25px;
+                background-color: $creamy !important;
+                color: $lightBrown !important;
 
-            &-remove {
-              font-family: "Inter", sans-serif !important;
-              border-radius: 25px !important;
-              height: 25px;
-              background-color: $creamy !important;
-              color: $lightBrown !important;
-
-              &:hover {
-                background-color: $brown !important;
-                color: $creamy !important;
+                &:hover {
+                  background-color: $brown !important;
+                  color: $creamy !important;
+                }
               }
             }
           }
         }
-      }
 
-      &-action {
-        height: 45px;
+        &-action {
+          height: 45px;
 
-        &-cancel,
-        &-save {
-          font-family: "Inter", sans-serif !important;
-          border-radius: 25px !important;
-          height: 35px;
-          background-color: $darkBrown !important;
-          color: $creamy !important;
+          &-cancel,
+          &-save {
+            font-family: "Inter", sans-serif !important;
+            border-radius: 25px !important;
+            height: 35px;
+            background-color: $darkBrown !important;
+            color: $creamy !important;
 
-          &:hover {
-            background-color: $creamy !important;
-            color: $lightBrown !important;
+            &:hover {
+              background-color: $creamy !important;
+              color: $lightBrown !important;
+            }
           }
         }
       }
     }
-  }
 
-  &__wishList {
-    display: flex;
-    flex-direction: column;
-    &-header {
-      text-align: center;
-      font-family: "Inter", sans-serif;
-      font-size: 18px;
-      color: $lightBrown;
-      margin: 10px;
-    }
+    &-wishList {
+      width: 33.33%;
 
-    &-items {
-      height: calc(100% - 45px);
-      overflow-y: auto;
-
-      &::-webkit-scrollbar {
-        width: 10px;
-
-        &-thumb {
-          background-color: $orange;
-          border-radius: 20px;
-        }
-
-        &-track {
-          background-color: rgba(237, 231, 220, 0.7);
-          border-radius: 20px;
-        }
+      &-header {
+        font-family: "Inter", sans-serif;
+        text-align: center;
+        color: $lightBrown;
       }
+
+      // &-items {
+      // }
     }
   }
 }
