--- a/giftyed/src/pages/my-profile-page/MyProfilePage.css
+++ b/giftyed/src/pages/my-profile-page/MyProfilePage.css
@@ -1,12 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap");
 .MyProfilePage__content {
-  height: calc(100vh - 120px);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  min-height: calc(100vh - 120px);
+  justify-content: space-evenly;
 }
 .MyProfilePage__content-info {
-  height: 50%;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  height: 50vh;
 }
 .MyProfilePage__content-menu {
-  height: 50%;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  background-color: #ECD3AF;
 }/*# sourceMappingURL=MyProfilePage.css.map */
