--- a/giftyed/src/components/searchList/SearchList.scss
+++ b/giftyed/src/components/searchList/SearchList.scss
@@ -1,6 +1,9 @@
 @import "../../utils/variables.scss";
 
 .SearchList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   width: 95vw;
   height: calc(100vh - 250px);
   font-family: "Inter", sans-serif;
@@ -23,7 +26,7 @@
     }
 
     &-photo {
-      width: 50%;
+      width: 30%;
       border-radius: 20px;
       transition: opacity 0.3s ease-out;
       position: relative;
